chore: Update start script to use production server configuration

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "build:production": "next build",
+    "start": "sh server.production.sh",
     "lint": "next lint"
   },
   "dependencies": {
