--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
